# Cosmic_Web

./: README.md  pyproject.toml  requirements.txt
cosmicweb/: __init__.py  data.py  fields.py  models.py  train.py  tweb.py  viz.py
docs/: quantum_computing_python_reference.md
notebooks/: 01_foundations.ipynb  02_foundations_zeldovich.ipynb  03_foundations_ingestion.ipynb  04_unet_2d.ipynb  05_field_2lpt.ipynb  06_unet_2lpt_sweep.ipynb  07_unet_3d.ipynb  08_capstone_toy.ipynb  09_real_data.ipynb  10_scaling_harness.ipynb  11_multifield.ipynb  README.md
scripts/: download_data.py  train_web.py  void_contents.py
